# mealpilot-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: personal_chief.py
app/api/v1/: auth.py  chat.py  chef.py  oss.py
app/common/: logger.py
app/core/: settings.py
app/models/: schemas.py
app/services/: auth_service.py  meal_planner.py
app/static/: index.html
docs/: project-interview-guide.md
notebooks/入门/: 1.安装.ipynb  2.调用OpenAI的SDK访问大模型.ipynb
notebooks/第一章/: 1.认识langchain.ipynb  2.初始化模型.ipynb  3.调用模型.ipynb  4.在智能体中使用模型.ipynb  5.消息.ipynb  6.提示词Prompts.ipynb  7.工具.ipynb  8.记忆.ipynb  9.记忆管理策略.ipynb
notebooks/第一章/Database/: checkpoint.db-shm  checkpoint.db-wal
notebooks/第一章案例：Ai私厨/: 1.Ai私厨.ipynb  2.LangSmith部署.ipynb  3.实战开发.ipynb
notebooks/第一章案例：Ai私厨/Database/: chief.db-shm  chief.db-wal
tests/: test_app.py
