[project]
name = "uv-practice"
version = "0.1.0"
description = "AI personal chef API built with FastAPI and LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "dashscope>=1.25.18",
    "fastapi>=0.136.3",
    "ipywidgets>=8.1.8",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain>=0.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
    "notebook>=7.5.6",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
]
